@startuml FormsignDB UML Diagram

' Configuration
skinparam monochrome true
skinparam classAttributeIconSize 0

' Entités (Tables)
class useraccounts {
  +id: varchar(36) [PK]
  --
  +folder_id: varchar(36) [FK]
  +api_token: varchar(255)
  +created_at: datetime
  +updated_at: datetime
}

class folders {
  +id: varchar(36) [PK]
  --
  +name: varchar(255)
  +file: longtext
  +mime_type: varchar(100)
  +created_at: datetime
  +updated_at: datetime
}

class senders {
  +id: varchar(36) [PK]
  --
  +email: varchar(255)
  +status: varchar(50)
  +created_at: datetime
  +updated_at: datetime
}

class signaturerequests {
  +id: varchar(36) [PK]
  --
  +sender_id: varchar(36) [FK]
  +folder_id: varchar(36) [FK] nullable
  +email_message: longtext
  +expiration_date: date
  +created_at: datetime
  +updated_at: datetime
  +name: varchar(255)
  +timezone: varchar(50)
  +signers_allowed_to_decline: tinyint
  +status: varchar(50)
}

class documents {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +insert_after_id: varchar(36) [FK]
  +file: longtext
  +name: varchar(255)
  +is_signable: tinyint(1)
  +initial_hash: varchar(64)
  +signed_hash: varchar(64)
  +mime_type: varchar(100)
  +created_at: datetime
}

class initialsettings {
  +id: varchar(36) [PK]
  --
  +document_id: varchar(36) [FK]
  +alignment: varchar(50)
  +y: int
}

class signaturesettings {
  +id: varchar(36) [PK]
  --
  +document_id: varchar(36) [FK]
  +page: int
  +x: int
  +y: int
  +height: int
  +width: int
}

class signers {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +insert_after_id: varchar(36) [FK]
  +first_name: varchar(100)
  +last_name: varchar(100)
  +email: varchar(255) [UNIQUE]
  +phone_number: varchar(20)
  +signature_authentication_mode: varchar(50)
  +has_signed: tinyint(1)
  +ip_address: varchar(45)
  +authentication_datetime: datetime
  +signature_datetime: datetime
  +created_at: datetime
}

class smsnotifications {
  +id: varchar(36) [PK]
  --
  +signer_id: varchar(36) [FK]
  +message: longtext
}

class auditlogs {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +event_type: varchar(100)
  +event_data: json
  +event_datetime: datetime
}

class remindersettings {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +interval_in_days: int
  +max_occurrences: int
}

class webhooks {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +event: varchar(100)
  +url: varchar(255)
  +method: varchar(10)
}

' Relations (Clés étrangères)
folders ||--o{ useraccounts : folder_id
folders ||--o{ signaturerequests : folder_id
senders ||--o{ signaturerequests : sender_id
signaturerequests ||--o{ documents : signature_request_id
signaturerequests ||--o{ auditlogs : signature_request_id
signaturerequests ||--o{ remindersettings : signature_request_id
signaturerequests ||--o{ webhooks : signature_request_id
signaturerequests ||--o{ signers : signature_request_id
documents ||--o{ initialsettings : document_id
documents ||--o{ signaturesettings : document_id
signers ||--o{ smsnotifications : signer_id

' Notes

@enduml